<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:minHeight="210dp"
    tools:context="com.allan.mydroid.views.send.SendListSelectorDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/disclaimerTv"
        style="@style/StyleAuTextSmallDesc"
        android:text="@string/disclaimer_content"
        android:layout_marginVertical="4dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/empty"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/empty_file_hint"
        style="@style/StyleAuTextBig"
        android:gravity="center"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/infoText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/btn_margin_bottom_m"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_small_info"
            android:tint="@color/color_text_desc"
            android:layout_gravity="center_vertical"
            android:layout_width="16dp"
            android:layout_height="16dp"/>

        <com.au.module_android.widget.CustomFontTextlink
            style="@style/StyleAuTextSmallDesc"
            android:text="@string/disclaimer_title"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>