<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.allan.mydroid.views.send.SendListSelectorFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/actionListHost"
        android:background="@color/logic_send"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.au.module_android.widget.CustomToolbar
        android:id="@+id/toolbar"
        app:title="@string/send_list"
        app:titleCentered="true"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@drawable/icon_back"
        app:navigationIconTint="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <LinearLayout
        android:id="@+id/actionListHost"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="33dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectImageAndVideoBtn"
            android:contentDescription="@string/gallery"
            android:padding="3dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_gallery"
            android:tint="@color/white"
            android:layout_width="33dp"
            android:layout_height="match_parent" />

        <com.au.module_android.widget.CustomFontText
            android:id="@+id/selectImageAndVideoText"
            style="@style/StyleAuTextSmallDesc"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectDocumentBtn"
            android:contentDescription="@string/select_files"
            android:padding="3dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_file"
            android:tint="@color/white"
            android:layout_width="33dp"
            android:layout_height="match_parent" />

        <com.au.module_android.widget.CustomFontText
            android:id="@+id/selectDocumentText"
            style="@style/StyleAuTextSmallDesc"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/select_files"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@id/rcvGuideLine"
        app:layout_constraintTop_toBottomOf="@id/actionListHost"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/empty"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/empty_file_hint"
        style="@style/StyleAuTextBig"
        android:gravity="center_horizontal"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        app:layout_constraintTop_toBottomOf="@id/actionListHost"
        app:layout_constraintBottom_toTopOf="@id/rcvGuideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rcvGuideLine"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <com.au.module_androidui.widget.ShineView
        android:background="#f0f0ee"
        android:id="@+id/adHost"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/rcvGuideLine"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/infoText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/btn_margin_bottom_m"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_small_info"
            android:tint="@color/color_text_desc"
            android:layout_gravity="center_vertical"
            android:layout_width="16dp"
            android:layout_height="16dp"/>

        <com.au.module_android.widget.CustomFontTextlink
            style="@style/StyleAuTextSmallDesc"
            android:text="@string/disclaimer_title"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/actionListHost"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </eightbitlab.com.blurview.BlurView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bigImage"
        android:visibility="gone"
        android:background="@color/color_normal_block"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintTop_toBottomOf="@id/actionListHost"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconPlay"
        android:visibility="gone"
        android:src="@drawable/ic_play_in_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tint="@color/white"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>